--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
   <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
     <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
     <div class="flex gap-2">
-      <input id="search" type="text" placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng" class="flex-1 p-3 rounded-xl text-gray-800" disabled>
-      <button id="btn" class="bg-white/20 px-4 rounded-xl font-semibold text-sm" disabled>Tìm</button>
+      <input id="search" type="text" placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng"
+        class="flex-1 p-3 rounded-xl text-gray-800" disabled>
+      <button id="btn" class="bg-white/20 px-4 rounded-xl font-semibold text-sm" disabled>
+        Tìm
+      </button>
     </div>
   </div>
 </header>
@@ -35,12 +38,15 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
     <div class="w-8 h-8 border-4 border-gray-200 border-t-blue-600 rounded-full animate-spin mx-auto mb-3"></div>
     <p class="text-sm">Đang tải dữ liệu...</p>
   </div>
+
   <div id="list" class="space-y-4 hidden"></div>
+
   <div id="empty" class="hidden bg-yellow-50 border-l-4 border-yellow-500 p-4 text-sm">
     Không tìm thấy tài sản phù hợp
   </div>
 </main>
 
+<!-- IMAGE MODAL -->
 <div id="imgModal" class="fixed inset-0 bg-black/90 hidden flex items-center justify-center">
   <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
   <button onclick="closeModal()" class="absolute top-4 right-4 text-white text-3xl">✕</button>
@@ -48,59 +54,103 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
 </div>
 
 <script>
-/* CONFIG */
-const SHEET_ID='14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
-const GID='61368668';
-const URL=`https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent('select A,B,C,D,E,F,G,H,I,J')}`;
-const $=id=>document.getElementById(id);
-let DATA=[], DISPLAY_DATA=[];
+/* ================= CONFIG ================= */
+const SHEET_ID = '14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
+const GID = '61368668';
+const QUERY = 'select A,B,C,D,E,F,G,H,I,J';
+const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent(QUERY)}&_=${Date.now()}`;
 
-/* CLEAN JSON */
-const cleanJSON=t=>JSON.parse(t.replace('/*O_o*/','').replace('google.visualization.Query.setResponse(','').slice(0,-2));
-function driveToImage(url){if(!url)return'';let m=url.match(/\/d\/([a-zA-Z0-9_-]+)/)||url.match(/id=([a-zA-Z0-9_-]+)/);return m?`https://lh3.googleusercontent.com/d/${m[1]}=w800`:''}
+const $ = id => document.getElementById(id);
+let DATA = [], DISPLAY_DATA = [];
 
-/* LOAD DATA */
+/* ================= UTIL ================= */
+function cleanJSON(t){
+  return JSON.parse(
+    t.replace('/*O_o*/','')
+     .replace('google.visualization.Query.setResponse(','')
+     .slice(0,-2)
+  );
+}
+
+function driveToImage(url){
+  if(!url) return '';
+  const str = url.toString().trim();
+
+  if (/^[a-zA-Z0-9_-]{20,}$/.test(str)) {
+    return `https://lh3.googleusercontent.com/d/${str}=w1000`;
+  }
+
+  const m =
+    str.match(/\/d\/([a-zA-Z0-9_-]+)/) ||
+    str.match(/id=([a-zA-Z0-9_-]+)/);
+
+  return m ? `https://lh3.googleusercontent.com/d/${m[1]}=w1000` : '';
+}
+
+/* ================= LOAD DATA ================= */
 async function loadData(){
-  const res=await fetch(URL);
-  const txt=await res.text();
-  const json=cleanJSON(txt);
-  DATA=json.table.rows.map(r=>{
-    const images=[driveToImage(r.c?.[7]?.v),driveToImage(r.c?.[8]?.v),driveToImage(r.c?.[9]?.v)].filter(Boolean);
-    return{
-      owner:r.c?.[0]?.v||'',
-      phone:r.c?.[1]?.v||'',
-      address:r.c?.[2]?.v||'',
-      price:r.c?.[3]?.v||'',
-      deposit:r.c?.[4]?.v||'',
-      commission:r.c?.[5]?.v||'',
-      imageLink:r.c?.[6]?.v||'',
-      images
+  modalImgs = [];
+  modalIdx = 0;
+
+  const res = await fetch(URL);
+  const txt = await res.text();
+  const json = cleanJSON(txt);
+
+  DATA = json.table.rows.map(r=>{
+    const imgs = [
+      driveToImage(r.c?.[7]?.v),
+      driveToImage(r.c?.[8]?.v),
+      driveToImage(r.c?.[9]?.v)
+    ].filter(Boolean).map(u => u + '&cb=' + Date.now());
+
+    return {
+      owner: r.c?.[0]?.v || '',
+      phone: r.c?.[1]?.v || '',
+      address: r.c?.[2]?.v || '',
+      price: r.c?.[3]?.v || '',
+      deposit: r.c?.[4]?.v || '',
+      commission: r.c?.[5]?.v || '',
+      imageLink: r.c?.[6]?.v || '',
+      images: imgs
     };
-  }).filter(i=>i.address);
+  }).filter(i => i.address);
+
   DISPLAY_DATA = [...DATA];
   $('loading').classList.add('hidden');
-  $('search').disabled=false;
-  $('btn').disabled=false;
+  $('search').disabled = false;
+  $('btn').disabled = false;
   render(DISPLAY_DATA);
 }
 
-/* SEARCH */
+/* ================= SEARCH ================= */
 function search(){
-  const k=$('search').value.toLowerCase().trim();
+  const k = $('search').value.toLowerCase().trim();
   $('search').blur();
-  DISPLAY_DATA = !k ? [...DATA] : DATA.filter(i=>[i.address,i.phone,i.price,i.deposit,i.commission].join(' ').toLowerCase().includes(k));
+
+  DISPLAY_DATA = !k ? [...DATA] : DATA.filter(i =>
+    [i.address,i.phone,i.price,i.deposit,i.commission]
+      .join(' ')
+      .toLowerCase()
+      .includes(k)
+  );
   render(DISPLAY_DATA);
 }
 
-/* COPY PHONE */
-function copyPhone(btn,phone){navigator.clipboard.writeText(phone).then(()=>{const old=btn.innerHTML;btn.innerHTML='✓';setTimeout(()=>btn.innerHTML=old,1000);});}
+/* ================= COPY PHONE ================= */
+function copyPhone(btn, phone){
+  navigator.clipboard.writeText(phone).then(()=>{
+    const old = btn.innerHTML;
+    btn.innerHTML = '✓';
+    setTimeout(()=>btn.innerHTML = old, 1000);
+  });
+}
 
-/* RENDER */
+/* ================= RENDER ================= */
 function render(arr){
-  const box=$('list'); 
-  box.innerHTML=''; 
+  const box = $('list');
+  box.innerHTML = '';
   $('empty').classList.add('hidden');
-  
+
   if(!arr.length){
     box.classList.add('hidden');
     $('empty').classList.remove('hidden');
@@ -108,18 +158,23 @@ function render(arr){
   }
 
   box.classList.remove('hidden');
-  box.innerHTML=arr.map((i,ci)=>`
+  box.innerHTML = arr.map((i,ci)=>`
     <div class="card bg-white p-4 shadow space-y-3">
-      ${i.images.length?`<div class="grid grid-cols-3 gap-2">
+
+      ${i.images.length ? `
+      <div class="grid grid-cols-3 gap-2">
         ${i.images.map((img,idx)=>`
-          <div class="thumb" data-idx="${idx}" data-card="${ci}" style="background-image:url('${img}')" loading="lazy"></div>
+          <div class="thumb" data-card="${ci}" data-idx="${idx}"
+            style="background-image:url('${img}')"></div>
         `).join('')}
-      </div>`:''}
+      </div>` : ''}
 
       <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
         <div class="text-xs uppercase text-indigo-500">Địa chỉ</div>
         <div class="font-bold text-indigo-800">
-          📍 <a href="${i.imageLink||'#'}" target="_blank" class="hover:underline">${i.address}</a>
+          📍 <a href="${i.imageLink||'#'}" target="_blank" class="hover:underline">
+            ${i.address}
+          </a>
         </div>
       </div>
 
@@ -139,73 +194,93 @@ function render(arr){
         <button onclick="copyPhone(this,'${i.phone}')" class="bg-gray-200 px-3 rounded-xl">📋</button>
       </div>
 
-      ${i.images.length>1?`<div class="text-right">
-        <a href="${i.imageLink||'#'}" target="_blank" class="text-sm text-blue-600 hover:underline font-semibold">Xem thêm ảnh</a>
-      </div>`:''}
-
       <div class="text-sm text-gray-500">👤 ${i.owner}</div>
     </div>
   `).join('');
 }
 
-/* ================= POPUP ================= */
-let modalImgs=[], modalIdx=0, scale=1, dx=0, dy=0;
-let swipeStartX=0, swipeStartY=0, startDist=0;
-const imgModal=$('imgModal'), modalImg=$('modalImg'), imgCount=$('imgCount');
+/* ================= IMAGE MODAL ================= */
+let modalImgs = [], modalIdx = 0, scale = 1, dx = 0, dy = 0;
+let swipeStartX = 0, swipeStartY = 0, startDist = 0;
+
+const imgModal = $('imgModal');
+const modalImg = $('modalImg');
+const imgCount = $('imgCount');
 
 document.addEventListener('click', e=>{
-  const t = e.target.closest('.thumb'); if(!t) return;
-  const cardIdx = +t.dataset.card;
-  modalImgs = DISPLAY_DATA[cardIdx].images;
+  const t = e.target.closest('.thumb');
+  if(!t) return;
+  modalImgs = DISPLAY_DATA[t.dataset.card].images;
   modalIdx = +t.dataset.idx;
   reset();
   openModal();
 });
 
-function openModal(){modalImg.src=modalImgs[modalIdx]; imgCount.innerText=`${modalIdx+1}/${modalImgs.length}`; imgModal.classList.remove('hidden');}
-function closeModal(){imgModal.classList.add('hidden');}
-function reset(){scale=1; dx=0; dy=0; swipeStartX=0; swipeStartY=0; apply();}
-function apply(){modalImg.style.transform=`translate(${dx}px,${dy}px) scale(${scale})`;}
+function openModal(){
+  modalImg.src = modalImgs[modalIdx];
+  imgCount.innerText = `${modalIdx+1}/${modalImgs.length}`;
+  imgModal.classList.remove('hidden');
+}
 
-/* TOUCH EVENTS */
+function closeModal(){
+  imgModal.classList.add('hidden');
+}
+
+function reset(){
+  scale = 1; dx = 0; dy = 0;
+  swipeStartX = 0; swipeStartY = 0;
+  apply();
+}
+
+function apply(){
+  modalImg.style.transform = `translate(${dx}px,${dy}px) scale(${scale})`;
+}
+
+/* ================= TOUCH ================= */
 imgModal.addEventListener('touchstart', e=>{
-  if(e.touches.length===1 && scale===1){swipeStartX = e.touches[0].clientX; swipeStartY=e.touches[0].clientY;}
-  else if(e.touches.length===2){
-    startDist = Math.hypot(e.touches[0].clientX-e.touches[1].clientX, e.touches[0].clientY-e.touches[1].clientY);
+  if(e.touches.length===1 && scale===1){
+    swipeStartX = e.touches[0].clientX;
+    swipeStartY = e.touches[0].clientY;
+  } else if(e.touches.length===2){
+    startDist = Math.hypot(
+      e.touches[0].clientX - e.touches[1].clientX,
+      e.touches[0].clientY - e.touches[1].clientY
+    );
   }
 },{passive:false});
 
 imgModal.addEventListener('touchmove', e=>{
   e.preventDefault();
   if(e.touches.length===2){
-    let d=Math.hypot(e.touches[0].clientX-e.touches[1].clientX, e.touches[0].clientY-e.touches[1].clientY);
-    scale=Math.min(Math.max(1, scale*d/startDist), 3); startDist=d;
-  } else if(e.touches.length===1 && scale>1){
-    dx += e.touches[0].clientX - swipeStartX;
-    dy += e.touches[0].clientY - swipeStartY;
-    swipeStartX = e.touches[0].clientX;
-    swipeStartY = e.touches[0].clientY;
+    let d = Math.hypot(
+      e.touches[0].clientX - e.touches[1].clientX,
+      e.touches[0].clientY - e.touches[1].clientY
+    );
+    scale = Math.min(Math.max(1, scale * d / startDist), 3);
+    startDist = d;
     apply();
   }
 },{passive:false});
 
 imgModal.addEventListener('touchend', e=>{
   if(scale===1 && e.changedTouches.length===1){
-    const swipeEndX = e.changedTouches[0].clientX;
-    const diff = swipeEndX - swipeStartX;
+    const diff = e.changedTouches[0].clientX - swipeStartX;
     if(Math.abs(diff) > 40){
-      modalIdx = diff<0 ? (modalIdx+1)%modalImgs.length : (modalIdx-1+modalImgs.length)%modalImgs.length;
-      reset(); openModal();
+      modalIdx = diff < 0
+        ? (modalIdx+1)%modalImgs.length
+        : (modalIdx-1+modalImgs.length)%modalImgs.length;
+      openModal();
     }
   }
-  dx=0; dy=0; swipeStartX=0; swipeStartY=0;
 });
 
-/* EVENTS */
-$('btn').onclick=search;
-$('search').addEventListener('keydown', e=>{if(e.key==='Enter') search();});
+/* ================= EVENTS ================= */
+$('btn').onclick = search;
+$('search').addEventListener('keydown', e=>{
+  if(e.key === 'Enter') search();
+});
 
-/* LOAD */
+/* ================= INIT ================= */
 loadData();
 </script>
 </body>
