--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>DỮ LIỆU NHÀ THUÊ</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
+body{font-family:Inter,sans-serif;background:#f1f5f9}
 .card{border-radius:18px}
 .badge{font-size:12px;padding:4px 10px;border-radius:999px}
-.thumb{height:110px;border-radius:14px;background-size:cover;background-position:center;cursor:pointer}
-#imgModal{touch-action:none;z-index:50}
-#modalImg{max-width:95vw;max-height:90vh;transform-origin:center;transition:transform .12s ease;user-select:none}
+.thumb{
+  height:110px;border-radius:14px;
+  background:#e5e7eb center/cover no-repeat;
+  cursor:pointer
+}
 </style>
 </head>
 
@@ -24,7 +26,7 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
   <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
     <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
     <div class="flex gap-2">
-      <input id="search" type="text" placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng"
+      <input id="search" placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng"
         class="flex-1 p-3 rounded-xl text-gray-800" disabled>
       <button id="btn" class="bg-white/20 px-4 rounded-xl font-semibold text-sm" disabled>
         Tìm
@@ -40,30 +42,22 @@ body{font-family:Inter,sans-serif;background:#f1f5f9;overscroll-behavior:none}
   </div>
 
   <div id="list" class="space-y-4 hidden"></div>
-
   <div id="empty" class="hidden bg-yellow-50 border-l-4 border-yellow-500 p-4 text-sm">
-    Không tìm thấy tài sản phù hợp
+    Không tìm thấy dữ liệu
   </div>
 </main>
 
-<!-- IMAGE MODAL -->
-<div id="imgModal" class="fixed inset-0 bg-black/90 hidden flex items-center justify-center">
-  <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
-  <button onclick="closeModal()" class="absolute top-4 right-4 text-white text-3xl">✕</button>
-  <img id="modalImg">
-</div>
-
 <script>
-/* ================= CONFIG ================= */
+/* ============ CONFIG ============ */
 const SHEET_ID = '14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
 const GID = '61368668';
 const QUERY = 'select A,B,C,D,E,F,G,H,I,J';
 const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent(QUERY)}&_=${Date.now()}`;
 
 const $ = id => document.getElementById(id);
-let DATA = [], DISPLAY_DATA = [];
+let DATA = [], VIEW = [];
 
-/* ================= UTIL ================= */
+/* ============ UTIL ============ */
 function cleanJSON(t){
   return JSON.parse(
     t.replace('/*O_o*/','')
@@ -74,35 +68,23 @@ function cleanJSON(t){
 
 function driveToImage(url){
   if(!url) return '';
-  const str = url.toString().trim();
-
-  if (/^[a-zA-Z0-9_-]{20,}$/.test(str)) {
-    return `https://lh3.googleusercontent.com/d/${str}=w1000`;
-  }
-
+  const s = url.toString().trim();
   const m =
-    str.match(/\/d\/([a-zA-Z0-9_-]+)/) ||
-    str.match(/id=([a-zA-Z0-9_-]+)/);
+    s.match(/\/file\/d\/([a-zA-Z0-9_-]+)/) ||
+    s.match(/\/d\/([a-zA-Z0-9_-]+)/) ||
+    s.match(/id=([a-zA-Z0-9_-]+)/) ||
+    s.match(/^([a-zA-Z0-9_-]{20,})$/);
 
-  return m ? `https://lh3.googleusercontent.com/d/${m[1]}=w1000` : '';
+  return m ? `https://drive.google.com/uc?export=view&id=${m[1]}` : '';
 }
 
-/* ================= LOAD DATA ================= */
+/* ============ LOAD ============ */
 async function loadData(){
-  modalImgs = [];
-  modalIdx = 0;
-
   const res = await fetch(URL);
   const txt = await res.text();
   const json = cleanJSON(txt);
 
   DATA = json.table.rows.map(r=>{
-    const imgs = [
-      driveToImage(r.c?.[7]?.v),
-      driveToImage(r.c?.[8]?.v),
-      driveToImage(r.c?.[9]?.v)
-    ].filter(Boolean).map(u => u + '&cb=' + Date.now());
-
     return {
       owner: r.c?.[0]?.v || '',
       phone: r.c?.[1]?.v || '',
@@ -111,42 +93,25 @@ async function loadData(){
       deposit: r.c?.[4]?.v || '',
       commission: r.c?.[5]?.v || '',
       imageLink: r.c?.[6]?.v || '',
-      images: imgs
+      images: [
+        driveToImage(r.c?.[7]?.v),
+        driveToImage(r.c?.[8]?.v),
+        driveToImage(r.c?.[9]?.v)
+      ].filter(Boolean)
     };
-  }).filter(i => i.address);
+  }).filter(i=>i.address);
 
-  DISPLAY_DATA = [...DATA];
+  VIEW = [...DATA];
   $('loading').classList.add('hidden');
   $('search').disabled = false;
   $('btn').disabled = false;
-  render(DISPLAY_DATA);
+
+  renderText(VIEW);
+  requestIdleCallback(loadImages); // ⬅ load ảnh sau
 }
 
-/* ================= SEARCH ================= */
-function search(){
-  const k = $('search').value.toLowerCase().trim();
-  $('search').blur();
-
-  DISPLAY_DATA = !k ? [...DATA] : DATA.filter(i =>
-    [i.address,i.phone,i.price,i.deposit,i.commission]
-      .join(' ')
-      .toLowerCase()
-      .includes(k)
-  );
-  render(DISPLAY_DATA);
-}
-
-/* ================= COPY PHONE ================= */
-function copyPhone(btn, phone){
-  navigator.clipboard.writeText(phone).then(()=>{
-    const old = btn.innerHTML;
-    btn.innerHTML = '✓';
-    setTimeout(()=>btn.innerHTML = old, 1000);
-  });
-}
-
-/* ================= RENDER ================= */
-function render(arr){
+/* ============ RENDER TEXT FIRST ============ */
+function renderText(arr){
   const box = $('list');
   box.innerHTML = '';
   $('empty').classList.add('hidden');
@@ -158,129 +123,77 @@ function render(arr){
   }
 
   box.classList.remove('hidden');
-  box.innerHTML = arr.map((i,ci)=>`
-    <div class="card bg-white p-4 shadow space-y-3">
-
-      ${i.images.length ? `
-      <div class="grid grid-cols-3 gap-2">
-        ${i.images.map((img,idx)=>`
-          <div class="thumb" data-card="${ci}" data-idx="${idx}"
-            style="background-image:url('${img}')"></div>
-        `).join('')}
-      </div>` : ''}
+  box.innerHTML = arr.map((i,idx)=>`
+    <div class="card bg-white p-4 shadow space-y-3" data-idx="${idx}">
+      <div class="grid grid-cols-3 gap-2 imgs"></div>
 
       <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
-        <div class="text-xs uppercase text-indigo-500">Địa chỉ</div>
-        <div class="font-bold text-indigo-800">
-          📍 <a href="${i.imageLink||'#'}" target="_blank" class="hover:underline">
-            ${i.address}
-          </a>
-        </div>
+        <div class="text-xs text-indigo-500">ĐỊA CHỈ</div>
+        <div class="font-bold text-indigo-800">${i.address}</div>
       </div>
 
       <div class="bg-red-50 border border-red-200 text-red-700 font-extrabold px-3 py-2 rounded-xl text-sm">
-        💰 Giá thuê: ${i.price}
+        💰 ${i.price}
       </div>
 
       <div class="flex gap-2">
         <span class="badge bg-gray-100">Cọc ${i.deposit}</span>
-        <span class="badge bg-green-100 text-green-700 font-semibold">HH ${i.commission}</span>
+        <span class="badge bg-green-100 text-green-700">HH ${i.commission}</span>
       </div>
 
-      <div class="flex gap-2">
-        <a href="tel:${i.phone}" class="flex-1 bg-green-600 text-white py-2 rounded-xl text-center font-semibold">
-          📞 GỌI NGAY (${i.phone})
-        </a>
-        <button onclick="copyPhone(this,'${i.phone}')" class="bg-gray-200 px-3 rounded-xl">📋</button>
-      </div>
+      <a href="tel:${i.phone}" class="block bg-green-600 text-white py-2 rounded-xl text-center font-semibold">
+        📞 ${i.phone}
+      </a>
 
       <div class="text-sm text-gray-500">👤 ${i.owner}</div>
     </div>
   `).join('');
 }
 
-/* ================= IMAGE MODAL ================= */
-let modalImgs = [], modalIdx = 0, scale = 1, dx = 0, dy = 0;
-let swipeStartX = 0, swipeStartY = 0, startDist = 0;
+/* ============ LAZY IMAGE LOAD ============ */
+function loadImages(){
+  document.querySelectorAll('[data-idx]').forEach(card=>{
+    const idx = +card.dataset.idx;
+    const imgs = DATA[idx].images;
+    if(!imgs.length) return;
 
-const imgModal = $('imgModal');
-const modalImg = $('modalImg');
-const imgCount = $('imgCount');
+    const box = card.querySelector('.imgs');
+    box.innerHTML = imgs.map(src=>`
+      <div class="thumb" data-src="${src}"></div>
+    `).join('');
+  });
 
-document.addEventListener('click', e=>{
-  const t = e.target.closest('.thumb');
-  if(!t) return;
-  modalImgs = DISPLAY_DATA[t.dataset.card].images;
-  modalIdx = +t.dataset.idx;
-  reset();
-  openModal();
-});
+  // load ảnh khi vào viewport
+  const io = new IntersectionObserver(entries=>{
+    entries.forEach(e=>{
+      if(e.isIntersecting){
+        const el = e.target;
+        el.style.backgroundImage = `url('${el.dataset.src}')`;
+        io.unobserve(el);
+      }
+    });
+  },{rootMargin:'100px'});
 
-function openModal(){
-  modalImg.src = modalImgs[modalIdx];
-  imgCount.innerText = `${modalIdx+1}/${modalImgs.length}`;
-  imgModal.classList.remove('hidden');
+  document.querySelectorAll('.thumb').forEach(t=>io.observe(t));
 }
 
-function closeModal(){
-  imgModal.classList.add('hidden');
+/* ============ SEARCH ============ */
+function search(){
+  const k = $('search').value.toLowerCase().trim();
+  VIEW = !k ? [...DATA] : DATA.filter(i =>
+    [i.address,i.phone,i.price,i.deposit,i.commission]
+      .join(' ').toLowerCase().includes(k)
+  );
+  renderText(VIEW);
+  requestIdleCallback(loadImages);
 }
 
-function reset(){
-  scale = 1; dx = 0; dy = 0;
-  swipeStartX = 0; swipeStartY = 0;
-  apply();
-}
-
-function apply(){
-  modalImg.style.transform = `translate(${dx}px,${dy}px) scale(${scale})`;
-}
-
-/* ================= TOUCH ================= */
-imgModal.addEventListener('touchstart', e=>{
-  if(e.touches.length===1 && scale===1){
-    swipeStartX = e.touches[0].clientX;
-    swipeStartY = e.touches[0].clientY;
-  } else if(e.touches.length===2){
-    startDist = Math.hypot(
-      e.touches[0].clientX - e.touches[1].clientX,
-      e.touches[0].clientY - e.touches[1].clientY
-    );
-  }
-},{passive:false});
-
-imgModal.addEventListener('touchmove', e=>{
-  e.preventDefault();
-  if(e.touches.length===2){
-    let d = Math.hypot(
-      e.touches[0].clientX - e.touches[1].clientX,
-      e.touches[0].clientY - e.touches[1].clientY
-    );
-    scale = Math.min(Math.max(1, scale * d / startDist), 3);
-    startDist = d;
-    apply();
-  }
-},{passive:false});
-
-imgModal.addEventListener('touchend', e=>{
-  if(scale===1 && e.changedTouches.length===1){
-    const diff = e.changedTouches[0].clientX - swipeStartX;
-    if(Math.abs(diff) > 40){
-      modalIdx = diff < 0
-        ? (modalIdx+1)%modalImgs.length
-        : (modalIdx-1+modalImgs.length)%modalImgs.length;
-      openModal();
-    }
-  }
-});
-
-/* ================= EVENTS ================= */
 $('btn').onclick = search;
 $('search').addEventListener('keydown', e=>{
   if(e.key === 'Enter') search();
 });
 
-/* ================= INIT ================= */
+/* ============ INIT ============ */
 loadData();
 </script>
 </body>
